# runebox-plugin

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: login.md  logout.md  push.md  status.md  sync.md
hooks/: hooks.json
runebox-alias/: LICENSE  README.md  pyproject.toml
runebox-alias/runebox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run.sh  sync.py  test_sync.py
